tests/sksl/errors/InterfaceBlockReservedName.glsl

IB {
    float f;
} float;
vec4 main() {
    return vec4(float.f);
}
